Add Sinus wave and playground demos

--- a/src/pages/playground.astro
+++ b/src/pages/playground.astro
@@ -3,8 +3,8 @@ import Layout from '../components/ThreeDemoLayout.astro'
 
 ---
 
-<Layout title="Terrain">
-  <script src="../scripts/demos/00-terrain/main.ts"></script>
+<Layout title="Playground">
+  <script src="../scripts/demos/02-playground/main.ts"></script>
   <main>
     <div id="container"></div>
   </main>
