--- a/src/pages/sinus-wave.astro
+++ b/src/pages/sinus-wave.astro
@@ -3,8 +3,8 @@ import Layout from '../components/ThreeDemoLayout.astro'
 
 ---
 
-<Layout title="Terrain">
-  <script src="../scripts/demos/00-terrain/main.ts"></script>
+<Layout title="Sinus wave">
+  <script src="../scripts/demos/01-sinus-wave/main.ts"></script>
   <main>
     <div id="container"></div>
   </main>
