--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,25 @@
 ---
-import CanvasContainer from '../components/CanvasContainer.astro'
 import Layout from '../components/Layout.astro'
-import Link from '../components/Link.astro'
+
+import { getCollection } from 'astro:content'
+const demos = (await getCollection('demos')).sort(
+  (a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 ---
 
-<Layout title="Demo">
+<Layout title="List of demos">
   <main>
-    <CanvasContainer />
-    <Link class="link" href="https://github.com/nemutas/three-template-with-astro" target="_blank" rel="noopener noreferrer">Github</Link>
+    
+    {demos && demos.length > 0 ? demos.map((demo: any) => (
+      <ul>
+        <li>
+          <article>
+            <a href={`/demos/${demo.slug}/`}>
+              {demo.data.title}
+            </a>
+          </article>
+          </li>
+      </ul>
+    )) : null}
   </main>
 </Layout>
-
-<style lang="scss">
-  main {
-    width: 100%;
-    height: 100%;
-  }
-  .link {
-    position: absolute;
-    bottom: 1rem;
-    right: 2rem;
-  }
-</style>
