--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/global.scss'
+import '@styles/global.scss'
 
 export interface Props {
   title: string
@@ -23,4 +23,4 @@ const { title } = Astro.props
   </body>
 </html>
 
-<script src="../scripts/entry.ts"></script>
+<script src="@scripts/entry.ts"></script>
