--- a/src/pages/demos/playground.astro
+++ b/src/pages/demos/playground.astro
@@ -1,11 +1,7 @@
 ---
 import Layout from '@layouts/ThreeDemoLayout.astro'
-
 ---
 
-<Layout title="Playground">
-  <script type="module" src="@scripts/demos/02-playground/main.ts"></script>
-  <main>
-    <div id="container"></div>
-  </main>
+<Layout title="Playground" description="Lots of shapes in a 3d space">
+  <script type="module" src="../src/scripts/demos/02-playground/main.ts"></script>
 </Layout>
