--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,39 +1,23 @@
-@use 'ress';
-@use './imports.scss';
+// @use 'ress';
 @use './mixins/medias.scss' as *;
-@use './mixins/fonts.scss';
+
+:root {
+  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
 html {
-  width: 100%;
-  height: 100%;
-  font-size: calc(1000vw / 750);
-  @include pc {
-    font-size: calc(1000vw / 1500);
-  }
-  @include fonts.poppins;
+  font-family:  var(--system-ui);
+  font-size: 1rem;
 }
 
 body {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  margin: 0;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 ul {
   list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
 }
