--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,16 +2,18 @@
 import '@styles/global.scss'
 
 export interface Props {
-  title: string
+  title: string,
+  description: string;
 }
 
-const { title } = Astro.props
+const { title, description } = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="generator" content={Astro.generator} />
