--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,7 @@
 ---
 import Layout from '@layouts/Layout.astro'
 
-/* import { getCollection } from 'astro:content'
-const demos = (await getCollection('demos')).sort(
-  (a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-); */
----
-
-<Layout title="List of demos">
+<Layout title="Hello world">
   <main>
     Hello world
   </main>
