--- a/src/pages/demos/index.astro
+++ b/src/pages/demos/index.astro
@@ -1,16 +1,30 @@
 ---
 import Layout from '@layouts/Layout.astro'
 
-const title = "Three.js demos"
+const title = 'Three.js demos'
+
+type Demo = {
+  title: string;
+  url: string;
+}
+
+const demos = [
+  { title: 'Blob', url: '/demos/blob'},
+  { title: 'Terrain', url: '/demos/terrain'},
+  { title: 'Sinus wave', url: '/demos/sinus-wave'},
+  { title: 'Playground', url: '/demos/playground'},
+]
 ---
 
 <Layout title={title} description={title}>
   <main>
     <h1 id="heading">{title}</h1>
-    <ul aria-labelledby="heading">
-      <li><a href="/demos/terrain">Terrain</a></li>
-      <li><a href="/demos/sinus-wave">Sinus wave</a></li>
-      <li><a href="/demos/playground">Playground</a></li>
-    </ul>
+    {demos && demos.length > 0 ? 
+      <ul aria-labelledby="heading">    
+        {demos.map((demo: Demo) => (
+          <li><a href={demo.url}>{demo.title}</a></li>
+        ))}
+      </ul>
+     : null} 
   </main>
 </Layout>
