Prettier format files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '@layouts/Layout.astro'
+---
 
-<Layout title="Hello world">
+<Layout title="Hello world" description="Welcome home">
   <main>
     Hello world
   </main>
