Update base URLs for Github pages

--- a/src/components/DemoHeader.astro
+++ b/src/components/DemoHeader.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props
 ---
 
 <header>
-  <a href="/"><BackArrow />Back</a>
+  <a href="/threejs-astro-demos"><BackArrow />Back</a>
   <span>{title}</span>
 </header>
 
