--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ type Demo = {
 }
 
 const demos = [
-  { title: 'Blob', url: '/demos/blob'},
-  { title: 'Terrain', url: '/demos/terrain'},
-  { title: 'Sinus wave', url: '/demos/sinus-wave'},
-  { title: 'Playground', url: '/demos/playground'},
+  { title: 'Blob', url: '/threejs-astro-demos/demos/blob'},
+  { title: 'Terrain', url: '/threejs-astro-demos/demos/terrain'},
+  { title: 'Sinus wave', url: '/threejs-astro-demos/demos/sinus-wave'},
+  { title: 'Playground', url: '/threejs-astro-demos/demos/playground'},
 ]
 ---
 
