--- a/src/pages/demos/blob.astro
+++ b/src/pages/demos/blob.astro
@@ -3,5 +3,5 @@ import Layout from '@layouts/ThreeDemoLayout.astro'
 ---
 
 <Layout title="Blob" description="A wavy blob">
-  <script type="module" src="../src/scripts/demos/03-blob/main.ts"></script>
+  <script src="../../scripts/demos/03-blob/main.ts"></script>
 </Layout>
