--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,21 @@ const demos = [
 
 <Layout title={title} description={title}>
   <main>
-    <h1 id="heading">{title}</h1>
-    {demos && demos.length > 0 ? 
-      <ul aria-labelledby="heading">    
-        {demos.map((demo: Demo) => (
-          <li><a href={demo.url}>{demo.title}</a></li>
-        ))}
-      </ul>
-     : null} 
+    <div id="panel">
+      <h1 id="heading">{title}</h1>
+      {demos && demos.length > 0 ? 
+        <ul aria-labelledby="heading">    
+          {demos.map((demo: Demo) => (
+            <li><a href={demo.url}>{demo.title}</a></li>
+          ))}
+        </ul>
+      : null} 
+     </div>
   </main>
 </Layout>
+
+<style lang="scss">
+  #panel {
+    position: relative;
+  }
+</style>
