Update script paths

--- a/src/pages/demos/playground.astro
+++ b/src/pages/demos/playground.astro
@@ -3,5 +3,5 @@ import Layout from '@layouts/ThreeDemoLayout.astro'
 ---
 
 <Layout title="Playground" description="Lots of shapes in a 3d space">
-  <script type="module" src="../src/scripts/demos/02-playground/main.ts"></script>
+  <script src="../../scripts/demos/02-playground/main.ts"></script>
 </Layout>
