--- a/src/pages/demos/terrain.astro
+++ b/src/pages/demos/terrain.astro
@@ -3,5 +3,5 @@ import Layout from '@layouts/ThreeDemoLayout.astro'
 ---
 
 <Layout title="Terrain" description="Wavy hills and valleys with a simple 3D plane">
-  <script type="module" src="../src/scripts/demos/00-terrain/main.ts"></script>
+  <script src="../../scripts/demos/00-terrain/main.ts"></script>
 </Layout>
