--- a/src/pages/demos/sinus-wave.astro
+++ b/src/pages/demos/sinus-wave.astro
@@ -3,5 +3,5 @@ import Layout from '@layouts/ThreeDemoLayout.astro'
 ---
 
 <Layout title="Sinus wave" description="Make a wavy box using vertex shader">
-  <script type="module" src="../src/scripts/demos/01-sinus-wave/main.ts"></script>
+  <script src="../../scripts/demos/01-sinus-wave/main.ts"></script>
 </Layout>
