--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,11 +1,9 @@
 ---
-import '../styles/global.scss'
-
-import DemoHeader from '@components/DemoHeader.astro';
+import '@styles/global.scss'
 
 export interface Props {
   title: string,
-  description: string
+  description: string;
 }
 
 const { title, description } = Astro.props
@@ -23,22 +21,6 @@ const { title, description } = Astro.props
   </head>
 
   <body>
-    <DemoHeader title={title} />
-    <main>
-      <div id="container"></div>
-      <slot />
-    </main>
+    <slot />
   </body>
 </html>
-
-<style lang="scss">
-  #container {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-  }
-
-  canvas {
-    display: block;
-  }
-</style>
