--- a/src/pages/demos/blob.astro
+++ b/src/pages/demos/blob.astro
@@ -1,7 +1,4 @@
 ---
-import Layout from '@layouts/ThreeDemoLayout.astro'
+import BlobDemo from '@demos/blob/index.astro';
 ---
-
-<Layout title="Blob" description="A wavy blob">
-  <script src="../../scripts/demos/03-blob/main.ts"></script>
-</Layout>
+<BlobDemo />
