--- a/src/pages/demos/playground.astro
+++ b/src/pages/demos/playground.astro
@@ -1,7 +1,4 @@
 ---
-import Layout from '@layouts/ThreeDemoLayout.astro'
+import PlaygroundDemo from '@demos/playground/index.astro';
 ---
-
-<Layout title="Playground" description="Lots of shapes in a 3d space">
-  <script src="../../scripts/demos/02-playground/main.ts"></script>
-</Layout>
+<PlaygroundDemo />
