--- a/src/pages/demos/sinus-wave.astro
+++ b/src/pages/demos/sinus-wave.astro
@@ -1,7 +1,5 @@
 ---
-import Layout from '@layouts/ThreeDemoLayout.astro'
+import SinusWaveDemo from '@demos/sinus-wave/index.astro';
 ---
+<SinusWaveDemo />
 
-<Layout title="Sinus wave" description="Make a wavy box using vertex shader">
-  <script src="../../scripts/demos/01-sinus-wave/main.ts"></script>
-</Layout>
