--- a/src/pages/demos/terrain.astro
+++ b/src/pages/demos/terrain.astro
@@ -1,7 +1,6 @@
 ---
-import Layout from '@layouts/ThreeDemoLayout.astro'
+import TerrainDemo from '@demos/terrain/index.astro';
 ---
+<TerrainDemo />
 
-<Layout title="Terrain" description="Wavy hills and valleys with a simple 3D plane">
-  <script src="../../scripts/demos/00-terrain/main.ts"></script>
-</Layout>
+
