Remove WIP script

--- a/src/demos/webgl-html/index.astro
+++ b/src/demos/webgl-html/index.astro
@@ -204,7 +204,7 @@ import image4 from './img/4.jpg';
       <!-- end scroll -->
     </main>
     <div id="container"></div>
-    <script src="./scripts/main.ts"></script>
+    <!-- <script src="./scripts/main.ts"></script> -->
   </body>
 </html>
 
