--- a/src/demos/webgl-html/index.astro
+++ b/src/demos/webgl-html/index.astro
@@ -11,22 +11,22 @@ import image4 from './img/4.jpg';
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Merging WebGL and HTML course project</title>
+    <meta name="description" content="Enhancing visuals of a simple HTML page using WebGL" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
 
-    <script type="importmap">
+    <!-- <script type="importmap">
       {
         "imports": {
-          "three": "https://unpkg.com/three/build/three.module.js",
           "imagesloaded": "https://unpkg.com/imagesloaded/imagesloaded.pkgd.min.js",
           "fontfaceobserver": "https://unpkg.com/fontfaceobserver/fontfaceobserver.js"
         }
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <main>
@@ -36,9 +36,7 @@ import image4 from './img/4.jpg';
             <h1>Oceans</h1>
             <img src={headerImage.src} alt="" />
           </header>
-          <!-- BEGIN grid -->
           <div class="grid">
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/octopuses-punch-fish.html"
               class="item item_v"
@@ -56,8 +54,6 @@ import image4 from './img/4.jpg';
                 partnership comes with risks (for the fish, that is).
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/balloon-like-comb-jelly-discovered-puerto-rico.html"
               class="item item_h"
@@ -76,8 +72,6 @@ import image4 from './img/4.jpg';
                 from video footage alone.
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/largest-recorded-swarm-of-deep-sea-fish.html"
               class="item item_h"
@@ -94,8 +88,7 @@ import image4 from './img/4.jpg';
                 observing our surroundings.
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
+
             <a
               href="https://www.livescience.com/mantis-shrimp-property-wars.html"
               class="item item_v"
@@ -110,9 +103,6 @@ import image4 from './img/4.jpg';
                 Home-stealers fought the hardest for smaller-than-ideal dens.
               </p>
             </a>
-            <!-- END item -->
-
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/megalodon-big-for-a-shark.html"
               class="item item_v"
@@ -128,8 +118,6 @@ import image4 from './img/4.jpg';
                 length and mass.
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/tiny-sunfish-larva.html"
               class="item item_h"
@@ -145,8 +133,6 @@ import image4 from './img/4.jpg';
                 world.
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/supergiant-isopod-newfound-species.html"
               class="item item_h"
@@ -162,8 +148,6 @@ import image4 from './img/4.jpg';
                 to science.
               </p>
             </a>
-            <!-- END item -->
-            <!-- BEGIN item -->
             <a
               href="https://www.livescience.com/worlds-deepest-octopus.html"
               class="item item_v"
@@ -178,11 +162,8 @@ import image4 from './img/4.jpg';
               </h2>
               <p>The octopus was found miles beneath the ocean surface.</p>
             </a>
-            <!-- END item -->
           </div>
-          <!-- END grid -->
 
-          <!-- BEGIN footer -->
           <footer class="footer">
             <p>
               &copy; all news from
@@ -197,92 +178,87 @@ import image4 from './img/4.jpg';
               <br />Wish you a good day! =)
             </p>
           </footer>
-          <!-- END footer -->
         </div>
-        <!-- end page -->
       </div>
-      <!-- end scroll -->
     </main>
     <div id="container"></div>
-    <!-- <script src="./scripts/main.ts"></script> -->
+    <script src="./main.ts"></script>
   </body>
 </html>
 
 <style lang="scss">
   * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  body {
-    font-family: "Open Sans", sans-serif;
-  }
-  
-  .page {
-    width: min(90%, 1200px);
-    margin: 0 auto;
-    /* border: 1px solid #000; */
-  }
-  /* header */
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 
-  header {
-    margin-bottom: 5em;
-    position: relative;
-  }
-  h1 {
-    font-size: 260px;
-    line-height: 1;
-    padding: 0.5em 0;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: #047582;
-    mix-blend-mode: color-burn;
-    font-size: 18vw;
-  }
-  header img {
+.page {
+  width: min(90%, 1200px);
+  margin: 0 auto;
+}
+
+header {
+  margin-bottom: 5em;
+  position: relative;
+
+  img {
     max-width: 100%;
     display: block;
-    /* opacity: 0.3; */
+    opacity: 0;
   }
-  h1,
-  h2 {
-    font-family: "Playfair Display", serif;
-    font-weight: normal;
-  }
+}
 
-  /* grid */
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 2em 0;
-  }
+h1 {
+  font-size: 260px;
+  line-height: 1;
+  padding: 0.5em 0;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #047582;
+  mix-blend-mode: color-burn;
+  font-size: 18vw;
+}
 
-  .item {
-    /* border: 1px solid #000; */
-    align-self: center;
-    justify-self: center;
-    text-decoration: none;
-    color: #333;
-  }
-  .item:nth-child(odd) {
+h1,
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: normal;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2em 0;
+}
+
+.item {
+  /* border: 1px solid #000; */
+  align-self: center;
+  justify-self: center;
+  text-decoration: none;
+  color: #333;
+
+  &:nth-child(odd) {
     justify-self: start;
   }
-  .item:nth-child(even) {
+
+  &:nth-child(even) {
     justify-self: end;
   }
-  .item img {
-    width: 100%;
-    display: block;
-    /* opacity: 0.3; */
-  }
-  .item__image {
+
+  &__image {
     position: relative;
     margin-bottom: 0.6em;
   }
-  .item__meta {
+
+  &__meta {
     position: absolute;
     left: -0.4em;
     bottom: 0.4em;
@@ -291,62 +267,74 @@ import image4 from './img/4.jpg';
     text-transform: uppercase;
     font-size: 80%;
   }
-  .item__title {
+
+  &__title {
     font-size: 40px;
     line-height: 1.2;
     margin-bottom: 0.4em;
   }
-  .item_p {
+
+  &_p {
     line-height: 1.4;
     font-size: 1em;
   }
-  .item_h {
+
+  &_h {
     width: 100%;
   }
-  .item_v {
+  &_v {
     width: 80%;
   }
 
-  /* footer */
-  .footer {
-    border-top: 1px solid #ccc;
-    padding: 1em;
-    font-size: 15px;
-    display: flex;
-    margin-top: 8em;
-    line-height: 1.5;
-    padding: 1em 0 4em 0;
+  img {
+    width: 100%;
+    display: block;
+    opacity: 0;
   }
-  .footer a {
+}
+
+.footer {
+  border-top: 1px solid #ccc;
+  font-size: 15px;
+  display: flex;
+  margin-top: 8em;
+  line-height: 1.5;
+  padding: 1em 0 4em 0;
+
+  a {
     color: #333;
   }
-  .footer p + p {
+
+  p + p {
     margin-left: auto;
     text-align: right;
   }
+}
 
-  @media screen and (max-width: 600px) {
-    .grid {
-      display: block;
-    }
-    .item_v,
-    .item_h {
-      width: auto;
-      margin-bottom: 3em;
-    }
-    .item img {
-      width: 100%;
-      max-width: none;
-    }
+@media screen and (max-width: 600px) {
+  .grid {
+    display: block;
   }
 
-  #container {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    /* opacity: 0; */
+  .item_v,
+  .item_h {
+    width: auto;
+    margin-bottom: 3em;
   }
+
+  .item img {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+#container {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
 </style>
