Add Demo header to webgl course project page

--- a/src/components/DemoHeader.astro
+++ b/src/components/DemoHeader.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props
 
 <style lang="scss">
   header {
-    position: absolute;
+    position: fixed;
     width: 100%;
     display: grid;
     background: rgb(0 0 0 / 100%);
@@ -34,6 +34,7 @@ const { title } = Astro.props
 
   a {
     justify-self: left;
+    color: rgb(255 255 255 / 100%);
   }
 
   span {
