--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ type Demo = {
 }
 
 const demos = [
+  { title: 'Nudge blob', url: '/threejs-astro-demos/demos/nudge-blob'},  
   { title: 'WebGL + HTML (Akella)', url: '/threejs-astro-demos/demos/webgl-html'},
   { title: 'Blob', url: '/threejs-astro-demos/demos/blob'},
   { title: 'Terrain', url: '/threejs-astro-demos/demos/terrain'},
