--- a/src/demos/blob/index.astro
+++ b/src/demos/blob/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/DemoLayout.astro'
+import Layout from '@layouts/ThreeJSDemoLayout.astro';
 ---
 
 <Layout title="Blob" description="Blobby blob">
