--- a/src/demos/book-of-shaders/uniforms-01/index.astro
+++ b/src/demos/book-of-shaders/uniforms-01/index.astro
@@ -2,6 +2,6 @@
 import Layout from '@layouts/ThreeJSDemoLayout.astro';
 ---
 
-<Layout title="Playground" description="Lots of shapes in a 3d space">
+<Layout title="Uniforms 01 - gl_FragColor" description="Shader example from the Book of Shaders">
   <script src="./main.ts"></script>
 </Layout>
