--- a/src/demos/sinus-wave/index.astro
+++ b/src/demos/sinus-wave/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/DemoLayout.astro'
+import Layout from '@layouts/ThreeJSDemoLayout.astro';
 ---
 
 <Layout title="Sinus wave" description="Make a wavy box using vertex shader">
