--- a/src/demos/terrain/index.astro
+++ b/src/demos/terrain/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/DemoLayout.astro'
+import Layout from '@layouts/ThreeJSDemoLayout.astro';
 ---
 
 <Layout title="Terrain" description="Wavy hills and valleys with a simple 3D plane">
