--- a/src/demos/nudge-blob/index.astro
+++ b/src/demos/nudge-blob/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/DemoLayout.astro'
+import Layout from '@layouts/ThreeJSDemoLayout.astro';
 ---
 
 <Layout title="Nudge blob" description="Nudge that blobby blob">
