--- a/src/pages/a11y-demos/description-list.astro
+++ b/src/pages/a11y-demos/description-list.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '@layouts/PageLayout.astro'
+import Layout from '@layouts/A11yDemoLayout.astro';
 
-const title = 'Description list'
+const title = 'Description list';
 ---
 
 <Layout title={title} description={title}>
-  <div class="demo">
+  <div class="a11y-demo-container">
     <h1 id="heading">Front-end technologies</h1>
     <dl aria-labelledby="heading">
       <div>
@@ -19,7 +19,7 @@ const title = 'Description list'
       <div>
         <dt>JavaScript</dt>
         <dd>Add interaction to your websites</dd>
-      </div>  
+      </div>
       <div>
         <dt>Git</dt>
         <dd>Version control</dd>
@@ -29,21 +29,8 @@ const title = 'Description list'
 </Layout>
 
 <style lang="scss">
-  .demo {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-
-    h1 {
-      align-self: center;
-    }
+  h1 {
+    align-self: center;
   }
 
   dl {
@@ -54,7 +41,8 @@ const title = 'Description list'
 
     div {
       margin-bottom: 0.5rem;
-      dt, dd {
+      dt,
+      dd {
         display: inline-block;
       }
     }
