Create dynamic routing for demo pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const threejsDemos = [
   { title: 'Terrain', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/terrain` },
   { title: 'Sinus wave', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/sinus-wave` },
   { title: 'Playground', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/playground` },
-  { title: 'Nudge blob (WIP)', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/nudge-blob` },
+  { title: 'Nudge blob (WIP)', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/interactive-blob` },
 ];
 
 const bosDemos = [
