--- a/src/pages/threejs-demos/nudge-blob.astro
+++ b/src/pages/threejs-demos/nudge-blob.astro
@@ -1,4 +1,5 @@
 ---
-import NudgeBlobDemo from '@demos/nudge-blob/index.astro';
+import BlobDemo from '@demos/interactive-blob/index.astro';
 ---
-<NudgeBlobDemo />
+
+<BlobDemo />
