--- a/src/components/DemoHeader.astro
+++ b/src/components/DemoHeader.astro
@@ -1,17 +1,17 @@
 ---
-import type { HTMLAttributes } from 'astro/types'
+import type { HTMLAttributes } from 'astro/types';
 
 import BackArrow from '@components/BackArrow.astro';
 
 interface Props extends HTMLAttributes<'header'> {
-  title: string
+  title: string;
 }
 
-const { title } = Astro.props
+const { title } = Astro.props;
 ---
 
 <header>
-  <a href="/threejs-astro-demos"><BackArrow />Back</a>
+  <a href="./"><BackArrow />Back</a>
   <span>{title}</span>
 </header>
 
@@ -27,7 +27,8 @@ const { title } = Astro.props
     border-bottom: 1px solid rgb(255 255 255 / 20%);
   }
 
-  a, span {
+  a,
+  span {
     grid-column-start: 1;
     grid-row-start: 1;
   }
