--- a/src/layouts/A11yDemoLayout.astro
+++ b/src/layouts/A11yDemoLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.scss';
 
+import { BASE_URL } from '@scripts/const';
 import DemoHeader from '@components/DemoHeader.astro';
 
 export interface Props {
@@ -17,7 +18,7 @@ const { title, description } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
