--- a/src/layouts/ThreeJSDemoLayout.astro
+++ b/src/layouts/ThreeJSDemoLayout.astro
@@ -1,23 +1,24 @@
 ---
-import '../styles/global.scss'
+import '../styles/global.scss';
 
+import { BASE_URL } from '@scripts/const';
 import DemoHeader from '@components/DemoHeader.astro';
 
 export interface Props {
-  title: string,
-  description: string
+  title: string;
+  description: string;
 }
 
-const { title, description } = Astro.props
+const { title, description } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
