--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@layouts/PageLayout.astro';
+import { BASE_URL } from '@scripts/const';
 
 const title = 'Demos';
-const BASE_PATH = '/threejs-astro-demos';
 const THREEJS_DEMO_PATH = '/threejs-demos';
 const A11Y_DEMO_PATH = '/a11y-demos';
 const BOS_DEMO_PATH = '/book-of-shaders-demos';
@@ -13,23 +13,23 @@ type Demo = {
 };
 
 const threejsDemos = [
-  { title: 'WebGL + HTML (Akella)', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/webgl-html` },
-  { title: 'Blob', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/blob` },
-  { title: 'Terrain', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/terrain` },
-  { title: 'Sinus wave', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/sinus-wave` },
-  { title: 'Playground', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/playground` },
-  { title: 'Nudge blob (WIP)', url: `${BASE_PATH}${THREEJS_DEMO_PATH}/interactive-blob` },
+  { title: 'WebGL + HTML (Akella)', url: `${BASE_URL}${THREEJS_DEMO_PATH}/webgl-html` },
+  { title: 'Blob', url: `${BASE_URL}${THREEJS_DEMO_PATH}/blob` },
+  { title: 'Terrain', url: `${BASE_URL}${THREEJS_DEMO_PATH}/terrain` },
+  { title: 'Sinus wave', url: `${BASE_URL}${THREEJS_DEMO_PATH}/sinus-wave` },
+  { title: 'Playground', url: `${BASE_URL}${THREEJS_DEMO_PATH}/playground` },
+  { title: 'Nudge blob (WIP)', url: `${BASE_URL}${THREEJS_DEMO_PATH}/interactive-blob` },
 ];
 
 const bosDemos = [
-  { title: 'Uniforms 01 - gl_FragColor', url: `${BASE_PATH}${BOS_DEMO_PATH}/uniforms-01` },
-  { title: 'Uniforms 02 - gl_FragColor', url: `${BASE_PATH}${BOS_DEMO_PATH}/uniforms-02` },
+  { title: 'Uniforms 01 - gl_FragColor', url: `${BASE_URL}${BOS_DEMO_PATH}/uniforms-01` },
+  { title: 'Uniforms 02 - gl_FragColor', url: `${BASE_URL}${BOS_DEMO_PATH}/uniforms-02` },
 ];
 
 const a11yDemos = [
-  { title: 'Acronyms', url: `${BASE_PATH}${A11Y_DEMO_PATH}/acronyms` },
-  { title: 'Description list', url: `${BASE_PATH}${A11Y_DEMO_PATH}/description-list` },
-  { title: 'Details', url: `${BASE_PATH}${A11Y_DEMO_PATH}/details` },
+  { title: 'Acronyms', url: `${BASE_URL}${A11Y_DEMO_PATH}/acronyms` },
+  { title: 'Description list', url: `${BASE_URL}${A11Y_DEMO_PATH}/description-list` },
+  { title: 'Details', url: `${BASE_URL}${A11Y_DEMO_PATH}/details` },
 ];
 ---
 
