Add DemoLayout with various types of script includes

--- a/src/demos/blob/index.astro
+++ b/src/demos/blob/index.astro
@@ -1,2 +1,6 @@
-<div id="blob-demo-container" class="demo-container"></div>
+---
+export const title = 'Blob';
+export const description = 'Blob';
+---
+
 <script src="./main.ts"></script>
