--- a/src/demos/playground/index.astro
+++ b/src/demos/playground/index.astro
@@ -1,2 +1,6 @@
-<div id="playground-demo-container" class="demo-container"></div>
+---
+export const title = 'Playground';
+export const description = 'Playground';
+---
+
 <script src="./main.ts"></script>
