Create new pages and move existing demos

--- a/src/layouts/ThreeJSDemoLayout.astro
+++ b/src/layouts/ThreeJSDemoLayout.astro
@@ -27,7 +27,7 @@ const { title, description } = Astro.props;
     <DemoHeader title={title} />
     <main>
       <slot />
-      <!-- <div id="container"></div> -->
+      <div id="demo-container"></div>
     </main>
   </body>
 </html>
