--- a/src/components/DemoHeader.astro
+++ b/src/components/DemoHeader.astro
@@ -5,19 +5,21 @@ import BackArrow from '@components/BackArrow.astro';
 
 interface Props extends HTMLAttributes<'header'> {
   title: string;
+  isScrolling?: true;
 }
 
-const { title } = Astro.props;
+const { title, isScrolling } = Astro.props;
+
+const className = isScrolling ? 'is-scrolling' : '';
 ---
 
-<header>
+<header class={className}>
   <a href="./"><BackArrow />Back</a>
   <span>{title}</span>
 </header>
 
 <style lang="scss">
   header {
-    position: fixed;
     width: 100%;
     display: grid;
     background: rgb(0 0 0 / 100%);
@@ -25,6 +27,10 @@ const { title } = Astro.props;
     color: rgb(255 255 255 / 100%);
     z-index: 1;
     border-bottom: 1px solid rgb(255 255 255 / 20%);
+
+    &:not(.is-scrolling) {
+      position: fixed;
+    }
   }
 
   a,
