--- a/src/pages/demos/the-book-of-shaders/index.astro
+++ b/src/pages/demos/the-book-of-shaders/index.astro
@@ -2,13 +2,11 @@
 import PageLayout from '@layouts/PageLayout.astro';
 import DemoHeader from '@components/DemoHeader.astro';
 
-const modules = import.meta.glob('/src/pages/demos/threejs-playground/*.astro', { eager: false });
-const title = 'Three.js playground';
-
-console.log('modules: ', modules);
+const modules = import.meta.glob('/src/pages/demos/the-book-of-shaders/*.astro', { eager: false });
+const title = 'The book of shaders';
 ---
 
-<PageLayout title={title} description="Three js demos">
+<PageLayout title={title} description="The book of shaders">
   <DemoHeader title={title} isScrolling />
   <main>
     <div class="demo-list-index">
