Generate demo pages and composite index pages

--- a/src/components/DemoHeader.astro
+++ b/src/components/DemoHeader.astro
@@ -14,7 +14,7 @@ const className = isScrolling ? 'is-scrolling' : '';
 ---
 
 <header class={className}>
-  <a href="./"><BackArrow />Back</a>
+  <a href="../"><BackArrow />Back</a>
   <span>{title}</span>
 </header>
 
