--- a/src/pages/demos/accessibility/details.astro
+++ b/src/pages/demos/accessibility/details.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/A11yDemoLayout.astro';
 
-const title = 'Details';
+export const title = 'Details';
 ---
 
 <Layout title={title} description={title}>
