--- a/src/pages/demos/accessibility/acronyms.astro
+++ b/src/pages/demos/accessibility/acronyms.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/A11yDemoLayout.astro';
 
-const title = 'Acronyms';
+export const title = 'Acronyms';
 ---
 
 <Layout title={title} description={title}>
