--- a/src/pages/demos/accessibility/description-list.astro
+++ b/src/pages/demos/accessibility/description-list.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/A11yDemoLayout.astro';
 
-const title = 'Description list';
+export const title = 'Description list';
 ---
 
 <Layout title={title} description={title}>
