--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,95 +1,1 @@
----
-import Layout from '@layouts/PageLayout.astro';
-import { BASE_URL } from '@scripts/const';
-
-const title = 'Demos';
-const THREEJS_DEMO_PATH = '/threejs-demos';
-const A11Y_DEMO_PATH = '/a11y-demos';
-const BOS_DEMO_PATH = '/book-of-shaders-demos';
-
-type Demo = {
-  title: string;
-  url: string;
-};
-
-const threejsDemos = [
-  { title: 'WebGL + HTML (Akella)', url: `${BASE_URL}${THREEJS_DEMO_PATH}/webgl-html` },
-  { title: 'Blob', url: `${BASE_URL}${THREEJS_DEMO_PATH}/blob` },
-  { title: 'Terrain', url: `${BASE_URL}${THREEJS_DEMO_PATH}/terrain` },
-  { title: 'Sinus wave', url: `${BASE_URL}${THREEJS_DEMO_PATH}/sinus-wave` },
-  { title: 'Playground', url: `${BASE_URL}${THREEJS_DEMO_PATH}/playground` },
-  { title: 'Nudge blob (WIP)', url: `${BASE_URL}${THREEJS_DEMO_PATH}/interactive-blob` },
-];
-
-const bosDemos = [
-  { title: 'Uniforms 01 - gl_FragColor', url: `${BASE_URL}${BOS_DEMO_PATH}/uniforms-01` },
-  { title: 'Uniforms 02 - gl_FragColor', url: `${BASE_URL}${BOS_DEMO_PATH}/uniforms-02` },
-];
-
-const a11yDemos = [
-  { title: 'Acronyms', url: `${BASE_URL}${A11Y_DEMO_PATH}/acronyms` },
-  { title: 'Description list', url: `${BASE_URL}${A11Y_DEMO_PATH}/description-list` },
-  { title: 'Details', url: `${BASE_URL}${A11Y_DEMO_PATH}/details` },
-];
----
-
-<Layout title={title} description={title}>
-  <main>
-    <div class="demo-list-index">
-      <h1>{title}</h1>
-
-      <div class="demo-list-container">
-        {
-          threejsDemos && threejsDemos.length > 0 ? (
-            <div>
-              <h2 id="threejs-demos-heading">Three.js demos</h2>
-              <ul aria-labelledby="threejs-demos-heading" class="demo-list">
-                {threejsDemos.map((demo: Demo) => (
-                  <li>
-                    <a href={demo.url}>{demo.title}</a>
-                  </li>
-                ))}
-              </ul>
-            </div>
-          ) : null
-        }
-
-        {
-          bosDemos && bosDemos.length > 0 ? (
-            <div>
-              <h2 id="threejs-demos-heading">Accessibility demos</h2>
-              <ul aria-labelledby="threejs-demos-heading">
-                {bosDemos.map((demo: Demo) => (
-                  <li>
-                    <a href={demo.url}>{demo.title}</a>
-                  </li>
-                ))}
-              </ul>
-            </div>
-          ) : null
-        }
-
-        {
-          a11yDemos && a11yDemos.length > 0 ? (
-            <div>
-              <h2 id="threejs-demos-heading">Accessibility demos</h2>
-              <ul aria-labelledby="threejs-demos-heading">
-                {a11yDemos.map((demo: Demo) => (
-                  <li>
-                    <a href={demo.url}>{demo.title}</a>
-                  </li>
-                ))}
-              </ul>
-            </div>
-          ) : null
-        }
-      </div>
-    </div>
-  </main>
-</Layout>
-
-<style lang="scss">
-  ul {
-    padding: 0;
-  }
-</style>
+You will not see this page as it's being redirected to `/demos`
